<resources>
    <string name="app_name">EpicTV</string>
    <string name="logo_desc">Logo da EPIC TV</string>
    <string name="inp_mail">Email</string>
    <string name="inp_password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnCreateAccount">Criar Conta</string>
    <string name="title_activity_player">Player</string>
    <string name="txtRecoverAccount">Recuperar Conta</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="startWatch">Ver filme</string>
    <string name="welcome1MainText">Assista vários filmes e séries!</string>
    <string name="start_session_welcome">Iniciar Sessão</string>
    <string name="aderir_lbl">Aderir</string>
    <string name="welcome1_slogan">Onde cada momento é épico.</string>
    <string name="welcome2MainText">Planos adaptados a ti!</string>
    <string name="welcome2_slogan">Diversão ajustada à tua carteira.</string>
    <string name="Welcome3MainText">Onde cada momento é épico!</string>
    <string name="welcome3_slogan">Vários filmes e séries da atualidade.</string>
    <string name="title_activity_planos">Planos</string>
    <string name="title_plans_page">O melhor do entretenimento, onde e quando quiser!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="monthly">Mensal</string>
    <string name="yearly">Anual</string>
    <string name="startWatching_signup">Assiste aos teus filmes e séries favoritos em qualquer lugar</string>
    <string name="criar_conta_signup">Aderir</string>
    <string name="required_char">*</string>
    <string name="profile_name">Nome do Perfil</string>
    <string name="repeat_pass_lbl">Repetir Password</string>
    <string name="name_lbl">Nome</string>
    <string name="required_fields">O carácter * indica que o campo é de preenchimento obrigatório</string>
    <string name="underage_warning">Ao criar conta, confirma que tem 18 anos ou mais, aceita os Termos de Utilização e declara que leu e compreendeu a nossa Política de Privacidade.</string>
    <string name="legal_lbl">Autorizo o envio de ofertas exclusivas, anúncios personalizados e atualizações sobre os conteúdos mais recentes disponíveis na EpicTV.</string>
    <string name="phone_number_lbl">Telemovel</string>
    <string name="plans_line1">Vários filmes e séries da atualidade.</string>
    <string name="plans_line2">Partilhe momentos inesquecíveis!</string>
    <string name="plans_line3">Diversão garantida para todos!</string>
    <string name="q720lbl">HD 720p – Imagem nítida e perfeita para descobrir novos conteúdos</string>
    <string name="q1080p_lbl">Full HD 1080p – Imagens vibrantes e imersivas</string>
    <string name="q4k_lbl">4K Ultra HD – Detalhes deslumbrantes para conquistar a tela.</string>
    <string name="watch_offline">Visualização de filmes offline</string>
    <string name="watch_2_lbl">Assista em tempo real com amigos</string>
    <string name="plan_renewal_policy">Os planos renovam-se automaticamente todos os meses, a menos que sejam cancelados com 30 dias de antecedência.</string>
    <string name="title_payMethod">Método de Pagamento</string>
    <string name="subtitle_payMethod">Escolhe o método de pagamento mais conveniente</string>
    <string name="next_lbl">Continuar</string>
    <string name="credit_card">Cartão de Crédito/Débito</string>
    <string name="gift_card">Cartão Pré-Pago</string>
    <string name="text_payment">Os planos renovam-se automaticamente todos os meses, a menos que sejam cancelados com 30 dias de antecedência.</string>
    <string name="subtitle_addcreditcard">Insira o cartão de crédito com que irá confirmar a sua adesão</string>
    <string name="creditcard_btn">Adicionar Cartão</string>
    <string name="creditcard_name">Nome no Cartão</string>
    <string name="creditcard_number">Número do Cartão</string>
    <string name="creditcard_data">Data de Validade</string>
    <string name="creditcard_cvv">CVV</string>
    <string name="creditcard_text">Ao adicionar um novo cartão, está automaticamente a aceitar as nossas Políticas de Segurança e Privacidade.</string>
    <string name="creditcard_title">Adicionar Cartão</string>
    <string name="giftcard_code">Código do Cartão Pré-Pago</string>
    <string name="resgatar_code_btn">Resgatar Código</string>
    <string name="ler_code_btn">Ler Código</string>
    <string name="text_qr_code">Scan QR Code</string>
    <string name="recoverpass_title">Recuperar Password</string>
    <string name="recoverpass_subtitle">Recupere a sua password e regresse ao melhor do entretenimento!</string>
    <string name="recoverpass_btn">Recuperar Password</string>
    <string name="numberverification_title">Verificação do Número</string>
    <string name="numberverification_subtitle">Insira o código enviado para o seu telemóvel</string>
    <string name="numberverification_btn">Verificar Codigo</string>
    <string name="numberverification_warningtext">Certifique-se de não partilhar este código com ninguém.</string>
    <string name="changepass_title">Alteração de Password</string>
    <string name="changepass_subtitle">Insira uma nova password para garantir a segurança da sua conta</string>
    <string name="changepass_input1">Nova Password</string>
    <string name="changepass_input2">Repetir Nova Password</string>
    <string name="changepass_btn">Alterar Password</string>
    <string name="perfil_title">Perfil</string>
    <string name="perfil_subtitle">O meu perfil epico</string>
    <string name="perfil_btn">Criar Conta</string>
    <string name="perfil_input1">Email</string>
    <string name="perfil_input2">Nome</string>
    <string name="perfil_input3">Password</string>
    <string name="perfil_title_child">Perfil Criança</string>
    <string name="perfil_subtitle_child">Feito para crianças com 12 anos ou menos, mas os pais têm controlo</string>
    <string name="lbl_loading">A processar...</string>
    <string name="downloads_title">Downloads</string>
    <string name="no_offline">Não existem conteudos disponiveis offline!</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
</resources>