<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowpageback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="71dp"
            android:text="@string/creditcard_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/subtitle_addcreditcard"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:src="@drawable/crditcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:id="@+id/code_giftcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/giftcard_code"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_char"
                android:textColor="#f37903" />
        </LinearLayout>

        <EditText
            android:id="@+id/code_input_giftcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/name_creditcard" />

        <Button
            android:id="@+id/resgatarcode"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/main_orange"
            android:text="@string/resgatar_code_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_qr_code"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_gift_card"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/ler_qr"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/main_orange"
            android:text="@string/ler_code_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>