<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowpageback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="71dp"
            android:text="@string/creditcard_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/subtitle_addcreditcard"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:src="@drawable/crditcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:id="@+id/name_creditcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/creditcard_name"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_char"
                android:textColor="#f37903" />
        </LinearLayout>

        <EditText
            android:id="@+id/name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <LinearLayout
            android:id="@+id/number_creditcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/creditcard_number"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_char"
                android:textColor="#f37903" />
        </LinearLayout>

        <EditText
            android:id="@+id/number_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <LinearLayout
            android:id="@+id/data_creditcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/creditcard_data"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_char"
                android:textColor="#f37903" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="91dp"
                android:text="@string/creditcard_cvv"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required_char"
                android:textColor="#f37903" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/data_card"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbox"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <EditText
                android:id="@+id/cvv_card"
                android:layout_width="80dp"
                android:layout_marginLeft="45dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbox"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditcard_text"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:textSize="11sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/criarconta"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/main_orange"
            android:text="@string/creditcard_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>